[package]

name = "rust-mdbm"
version = "0.0.1"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "High-level bindings to the MDBM library"
repository = "https://github.com/erickt/rust-mdbm"

[dependencies]
mdbm-sys = { version = "*", path = "mdbm-sys" }
libc = "0.2"

