[package]

name = "rust-mdbm"
version = "0.1.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "Wendell Smith <wackywendell@gmail.com>"]
license = "MIT/Apache-2.0"
description = "High-level bindings to the MDBM library"
repository = "https://github.com/erickt/rust-mdbm"

[dependencies]
mdbm-sys = { version = "*", path = "mdbm-sys" }
libc = "0.2"

[dev-dependencies]
"bencher" = "0.1.5"

[[bench]]
name = "benches"
path = "src/benches.rs"
harness = false