[package]
name = "mdbm-sys"
version = "0.1.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>", "Wendell Smith <wackywendell@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Low-level bindings to the mdbm library"
repository = "https://github.com/erickt/rust-mdbm"

[build-dependencies]
bindgen = "0.42.2"